--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,12 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=SCOTT
-spring.datasource.password=tiger
+spring.datasource.password=TIGER
 
 # Mybatis
 # Mapper Location
 mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 
 # Static
 # spring.mvc.static-path-pattern=
