feat: attendedGoods, attendedGoodsDetail, registeredGoods, registeredGoodsDetail, registeredGoodsSales page 삭제 요청, 운송장 번호 등록/조회

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,5 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # Multipart
 spring.servlet.multipart.enabled=true
 
-# props.fileloc=
+# Delivery API
+delivery.trackker.key=tX0mIRWGd8vfLSq47GJDSA
