--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=SCOTT
-spring.datasource.password=TIGER
+spring.datasource.password=tiger
 
 # Mybatis
 # Mapper Location
@@ -36,3 +36,11 @@ spring.servlet.multipart.enabled=true
 
 # Delivery API
 delivery.trackker.key=tX0mIRWGd8vfLSq47GJDSA
+
+# mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
