feat: register goods, item, img, downloading img, push DB

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
 			    <artifactId>jbcrypt</artifactId>
 			    <version>0.4</version>
 			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/cglib/cglib -->
+			<dependency>
+			    <groupId>cglib</groupId>
+			    <artifactId>cglib</artifactId>
+			    <version>3.3.0</version>
+			</dependency>
 	</dependencies>
 
 	<build>
