fix: register, card, main

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
 			    <artifactId>cglib</artifactId>
 			    <version>3.3.0</version>
 			</dependency>
+			
+			
+			<!-- SpringBoot mailService -->
+    		<dependency>
+		        <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-starter-mail</artifactId>
+	    	</dependency>
 	</dependencies>
 
 	<build>
