--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,8 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 # Multipart
 spring.servlet.multipart.enabled=true
-props.fileloc=C:\\Users\\soh37\\workspace\\multi\\09.finalProject\\crafty\\src\\main\\resources\\static\\img
+props.fileloc=/img
 
 # Delivery API
-delivery.trackker.key=tX0mIRWGd8vfLSq47GJDSA
+delivery.trackker.key=
 
