feat: add order 결제 확인 메일

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 # Multipart
 spring.servlet.multipart.enabled=true
-props.fileloc=C:\\Users\\soh37\\workspace\\multi\\09.finalProject\\crafty\\src\\main\\resources\\static\\img
+props.fileloc=C:\\Multi\\09.FinalProject\\crafty\\src\\main\\resources\\static\\img
 
 # Delivery API
 delivery.trackker.key=tX0mIRWGd8vfLSq47GJDSA
